--- a/nb/kawasanku2023.ipynb
+++ b/nb/kawasanku2023.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing push"
+    "## Testing push trying"
    ]
   },
   {
