--- a/nb/kawasanku2023.ipynb
+++ b/nb/kawasanku2023.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "[3717 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "            divorced         1.67932"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +434,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>country</td>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>52.288396</td>\n",
+       "      <td>47.711604</td>\n",
+       "      <td>26.417660</td>\n",
+       "      <td>68.293245</td>\n",
+       "      <td>5.289095</td>\n",
+       "      <td>69.395464</td>\n",
+       "      <td>23.162703</td>\n",
+       "      <td>6.717156</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.697297</td>\n",
+       "      <td>6.069737</td>\n",
+       "      <td>0.878814</td>\n",
+       "      <td>1.771696</td>\n",
+       "      <td>91.706358</td>\n",
+       "      <td>8.293642</td>\n",
+       "      <td>35.819630</td>\n",
+       "      <td>58.462116</td>\n",
+       "      <td>4.038933</td>\n",
+       "      <td>1.679320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>district</td>\n",
        "      <td>Alor Gajah</td>\n",
        "      <td>51.637418</td>\n",
@@ -457,7 +481,7 @@
        "      <td>1.697101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>district</td>\n",
        "      <td>Asajaya</td>\n",
        "      <td>51.005773</td>\n",
@@ -481,7 +505,7 @@
        "      <td>1.890164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>district</td>\n",
        "      <td>Bachok</td>\n",
        "      <td>48.452520</td>\n",
@@ -505,7 +529,7 @@
        "      <td>1.260386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>district</td>\n",
        "      <td>Bagan Datuk</td>\n",
        "      <td>55.442411</td>\n",
@@ -527,30 +551,6 @@
        "      <td>47.865252</td>\n",
        "      <td>7.257245</td>\n",
        "      <td>1.189125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>district</td>\n",
-       "      <td>Baling</td>\n",
-       "      <td>51.248221</td>\n",
-       "      <td>48.751779</td>\n",
-       "      <td>27.183949</td>\n",
-       "      <td>66.035487</td>\n",
-       "      <td>6.780564</td>\n",
-       "      <td>92.128689</td>\n",
-       "      <td>3.018290</td>\n",
-       "      <td>3.232247</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.244162</td>\n",
-       "      <td>3.249371</td>\n",
-       "      <td>0.168252</td>\n",
-       "      <td>0.919078</td>\n",
-       "      <td>97.970458</td>\n",
-       "      <td>2.029542</td>\n",
-       "      <td>35.019159</td>\n",
-       "      <td>57.821199</td>\n",
-       "      <td>6.222638</td>\n",
-       "      <td>0.937003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -577,32 +577,56 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>district</td>\n",
-       "      <td>Ulu Selangor</td>\n",
-       "      <td>53.213814</td>\n",
-       "      <td>46.786186</td>\n",
-       "      <td>28.973086</td>\n",
-       "      <td>67.033152</td>\n",
-       "      <td>3.993762</td>\n",
-       "      <td>74.878236</td>\n",
-       "      <td>11.331406</td>\n",
-       "      <td>13.290393</td>\n",
+       "      <th>172</th>\n",
+       "      <td>state</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>53.053054</td>\n",
+       "      <td>46.946946</td>\n",
+       "      <td>29.465847</td>\n",
+       "      <td>67.436070</td>\n",
+       "      <td>3.098083</td>\n",
+       "      <td>60.585015</td>\n",
+       "      <td>27.310454</td>\n",
+       "      <td>11.290325</td>\n",
        "      <td>...</td>\n",
-       "      <td>10.185616</td>\n",
-       "      <td>12.141349</td>\n",
-       "      <td>0.510639</td>\n",
-       "      <td>1.204794</td>\n",
-       "      <td>95.633031</td>\n",
-       "      <td>4.366969</td>\n",
-       "      <td>34.147267</td>\n",
-       "      <td>61.130282</td>\n",
-       "      <td>2.948612</td>\n",
-       "      <td>1.773839</td>\n",
+       "      <td>21.625143</td>\n",
+       "      <td>10.309499</td>\n",
+       "      <td>1.256530</td>\n",
+       "      <td>0.787570</td>\n",
+       "      <td>91.936604</td>\n",
+       "      <td>8.063396</td>\n",
+       "      <td>34.409743</td>\n",
+       "      <td>61.607923</td>\n",
+       "      <td>2.099164</td>\n",
+       "      <td>1.883170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>district</td>\n",
+       "      <th>173</th>\n",
+       "      <td>state</td>\n",
+       "      <td>Terengganu</td>\n",
+       "      <td>51.143600</td>\n",
+       "      <td>48.856400</td>\n",
+       "      <td>28.631943</td>\n",
+       "      <td>65.865030</td>\n",
+       "      <td>5.503028</td>\n",
+       "      <td>97.554936</td>\n",
+       "      <td>2.062798</td>\n",
+       "      <td>0.186993</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.034208</td>\n",
+       "      <td>0.243858</td>\n",
+       "      <td>0.036627</td>\n",
+       "      <td>0.099353</td>\n",
+       "      <td>97.703055</td>\n",
+       "      <td>2.296945</td>\n",
+       "      <td>37.916302</td>\n",
+       "      <td>55.274668</td>\n",
+       "      <td>5.573868</td>\n",
+       "      <td>1.235162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>state</td>\n",
        "      <td>W.P. Kuala Lumpur</td>\n",
        "      <td>53.423116</td>\n",
        "      <td>46.576884</td>\n",
@@ -625,8 +649,8 @@
        "      <td>1.751510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>district</td>\n",
+       "      <th>175</th>\n",
+       "      <td>state</td>\n",
        "      <td>W.P. Labuan</td>\n",
        "      <td>51.398234</td>\n",
        "      <td>48.601766</td>\n",
@@ -649,8 +673,8 @@
        "      <td>2.232769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158</th>\n",
-       "      <td>district</td>\n",
+       "      <th>176</th>\n",
+       "      <td>state</td>\n",
        "      <td>W.P. Putrajaya</td>\n",
        "      <td>49.059541</td>\n",
        "      <td>50.940459</td>\n",
@@ -672,109 +696,94 @@
        "      <td>2.036675</td>\n",
        "      <td>2.209755</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>district</td>\n",
-       "      <td>Yan</td>\n",
-       "      <td>51.317726</td>\n",
-       "      <td>48.682274</td>\n",
-       "      <td>30.501199</td>\n",
-       "      <td>60.605854</td>\n",
-       "      <td>8.892947</td>\n",
-       "      <td>96.066042</td>\n",
-       "      <td>3.755391</td>\n",
-       "      <td>0.086536</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.642483</td>\n",
-       "      <td>0.049057</td>\n",
-       "      <td>0.050420</td>\n",
-       "      <td>0.318871</td>\n",
-       "      <td>99.206912</td>\n",
-       "      <td>0.793088</td>\n",
-       "      <td>30.642874</td>\n",
-       "      <td>61.569369</td>\n",
-       "      <td>6.684787</td>\n",
-       "      <td>1.102970</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>160 rows × 23 columns</p>\n",
+       "<p>177 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "chart    area_type               area        sex              agegroup  \\\n",
        "variable                                    male     female      child   \n",
-       "0         district         Alor Gajah  51.637418  48.362582  19.272847   \n",
-       "1         district            Asajaya  51.005773  48.994227  25.063977   \n",
-       "2         district             Bachok  48.452520  51.547480  27.437567   \n",
-       "3         district        Bagan Datuk  55.442411  44.557589  17.470556   \n",
-       "4         district             Baling  51.248221  48.751779  27.183949   \n",
+       "0          country           Malaysia  52.288396  47.711604  26.417660   \n",
+       "1         district         Alor Gajah  51.637418  48.362582  19.272847   \n",
+       "2         district            Asajaya  51.005773  48.994227  25.063977   \n",
+       "3         district             Bachok  48.452520  51.547480  27.437567   \n",
+       "4         district        Bagan Datuk  55.442411  44.557589  17.470556   \n",
        "..             ...                ...        ...        ...        ...   \n",
-       "155       district       Ulu Selangor  53.213814  46.786186  28.973086   \n",
-       "156       district  W.P. Kuala Lumpur  53.423116  46.576884  22.793969   \n",
-       "157       district        W.P. Labuan  51.398234  48.601766  27.347561   \n",
-       "158       district     W.P. Putrajaya  49.059541  50.940459  37.966338   \n",
-       "159       district                Yan  51.317726  48.682274  30.501199   \n",
+       "172          state           Selangor  53.053054  46.946946  29.465847   \n",
+       "173          state         Terengganu  51.143600  48.856400  28.631943   \n",
+       "174          state  W.P. Kuala Lumpur  53.423116  46.576884  22.793969   \n",
+       "175          state        W.P. Labuan  51.398234  48.601766  27.347561   \n",
+       "176          state     W.P. Putrajaya  49.059541  50.940459  37.966338   \n",
        "\n",
        "chart                          ethnicity                        ...  \\\n",
        "variable    working   elderly       bumi    chinese     indian  ...   \n",
-       "0         74.571697  6.155456  79.779960  12.048990   7.884323  ...   \n",
-       "1         65.387133  9.548890  95.351001   4.600978   0.015006  ...   \n",
-       "2         66.462794  6.099639  98.789470   0.867226   0.071735  ...   \n",
-       "3         75.145256  7.384188  56.552802  19.664578  23.490531  ...   \n",
-       "4         66.035487  6.780564  92.128689   3.018290   3.232247  ...   \n",
+       "0         68.293245  5.289095  69.395464  23.162703   6.717156  ...   \n",
+       "1         74.571697  6.155456  79.779960  12.048990   7.884323  ...   \n",
+       "2         65.387133  9.548890  95.351001   4.600978   0.015006  ...   \n",
+       "3         66.462794  6.099639  98.789470   0.867226   0.071735  ...   \n",
+       "4         75.145256  7.384188  56.552802  19.664578  23.490531  ...   \n",
        "..              ...       ...        ...        ...        ...  ...   \n",
-       "155       67.033152  3.993762  74.878236  11.331406  13.290393  ...   \n",
-       "156       73.452106  3.753925  47.716932  41.561433  10.041293  ...   \n",
-       "157       68.451430  4.201009  86.217492  11.677819   1.057090  ...   \n",
-       "158       60.628010  1.405652  97.897181   0.629812   1.224843  ...   \n",
-       "159       60.605854  8.892947  96.066042   3.755391   0.086536  ...   \n",
+       "172       67.436070  3.098083  60.585015  27.310454  11.290325  ...   \n",
+       "173       65.865030  5.503028  97.554936   2.062798   0.186993  ...   \n",
+       "174       73.452106  3.753925  47.716932  41.561433  10.041293  ...   \n",
+       "175       68.451430  4.201009  86.217492  11.677819   1.057090  ...   \n",
+       "176       60.628010  1.405652  97.897181   0.629812   1.224843  ...   \n",
        "\n",
        "chart      religion                                nationality             \\\n",
        "variable   buddhist      hindu     other   atheist       local    foreign   \n",
-       "0         11.342819   7.490897  0.433918  2.945989   92.731276   7.268724   \n",
-       "1          3.561864   0.002976  0.107124  0.011903   99.145986   0.854014   \n",
-       "2          1.006434   0.063578  0.011444  0.183104   99.263771   0.736229   \n",
-       "3         18.317328  21.501480  0.370840  1.902519   88.087214  11.912786   \n",
-       "4          4.244162   3.249371  0.168252  0.919078   97.970458   2.029542   \n",
+       "0         18.697297   6.069737  0.878814  1.771696   91.706358   8.293642   \n",
+       "1         11.342819   7.490897  0.433918  2.945989   92.731276   7.268724   \n",
+       "2          3.561864   0.002976  0.107124  0.011903   99.145986   0.854014   \n",
+       "3          1.006434   0.063578  0.011444  0.183104   99.263771   0.736229   \n",
+       "4         18.317328  21.501480  0.370840  1.902519   88.087214  11.912786   \n",
        "..              ...        ...       ...       ...         ...        ...   \n",
-       "155       10.185616  12.141349  0.510639  1.204794   95.633031   4.366969   \n",
-       "156       32.269569   8.219818  1.768064  6.013283   89.483642  10.516358   \n",
-       "157        8.069807   0.643398  0.197645  0.069386   88.612279  11.387721   \n",
-       "158        0.488086   1.054926  0.089742  0.372704   97.416714   2.583286   \n",
-       "159        3.642483   0.049057  0.050420  0.318871   99.206912   0.793088   \n",
+       "172       21.625143  10.309499  1.256530  0.787570   91.936604   8.063396   \n",
+       "173        2.034208   0.243858  0.036627  0.099353   97.703055   2.296945   \n",
+       "174       32.269569   8.219818  1.768064  6.013283   89.483642  10.516358   \n",
+       "175        8.069807   0.643398  0.197645  0.069386   88.612279  11.387721   \n",
+       "176        0.488086   1.054926  0.089742  0.372704   97.416714   2.583286   \n",
        "\n",
        "chart          marital                                 \n",
        "variable never_married    married   widowed  divorced  \n",
-       "0            42.732384  50.909935  4.660580  1.697101  \n",
-       "1            35.194377  56.967002  5.948457  1.890164  \n",
-       "2            41.769283  51.801430  5.168901  1.260386  \n",
-       "3            43.688378  47.865252  7.257245  1.189125  \n",
-       "4            35.019159  57.821199  6.222638  0.937003  \n",
+       "0            35.819630  58.462116  4.038933  1.679320  \n",
+       "1            42.732384  50.909935  4.660580  1.697101  \n",
+       "2            35.194377  56.967002  5.948457  1.890164  \n",
+       "3            41.769283  51.801430  5.168901  1.260386  \n",
+       "4            43.688378  47.865252  7.257245  1.189125  \n",
        "..                 ...        ...       ...       ...  \n",
-       "155          34.147267  61.130282  2.948612  1.773839  \n",
-       "156          32.705470  62.350887  3.192132  1.751510  \n",
-       "157          35.883485  58.047665  3.836080  2.232769  \n",
-       "158          27.733099  68.020471  2.036675  2.209755  \n",
-       "159          30.642874  61.569369  6.684787  1.102970  \n",
+       "172          34.409743  61.607923  2.099164  1.883170  \n",
+       "173          37.916302  55.274668  5.573868  1.235162  \n",
+       "174          32.705470  62.350887  3.192132  1.751510  \n",
+       "175          35.883485  58.047665  3.836080  2.232769  \n",
+       "176          27.733099  68.020471  2.036675  2.209755  \n",
        "\n",
-       "[160 rows x 23 columns]"
+       "[177 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3 = df.query(\"area_type == 'district'\").reset_index()\n",
+    "# df3 = df.query(\"area_type == 'district'\").reset_index()\n",
     "\n",
     "# Example dataframe\n",
     "\n",
     "# Pivot the dataframe to create separate columns for each value of 'variable'\n",
-    "df_pivoted = df3.pivot(index=['area_type', 'area'], columns=['chart','variable'], values='value').reset_index()\n",
+    "df_pivoted = df.pivot(index=['area_type', 'area'], columns=['chart','variable'], values='value').reset_index()\n",
     "df_pivoted\n",
     "# df_pivoted.to_csv('kawasanku_district2021.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pivoted.to_csv('demographic_geo_levelALL_2021.csv',index=False)"
    ]
   },
   {
