--- a/nb/newnb.ipynb
+++ b/nb/newnb.ipynb
@@ -2,11 +2,478 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_type</th>\n",
+       "      <th>area</th>\n",
+       "      <th>age_0_4_male</th>\n",
+       "      <th>age_5_9_male</th>\n",
+       "      <th>age_10_14_male</th>\n",
+       "      <th>age_15_19_male</th>\n",
+       "      <th>age_20_24_male</th>\n",
+       "      <th>age_25_29_male</th>\n",
+       "      <th>age_30_34_male</th>\n",
+       "      <th>age_35_39_male</th>\n",
+       "      <th>...</th>\n",
+       "      <th>age_40_44_female</th>\n",
+       "      <th>age_45_49_female</th>\n",
+       "      <th>age_50_54_female</th>\n",
+       "      <th>age_55_59_female</th>\n",
+       "      <th>age_60_64_female</th>\n",
+       "      <th>age_65_69_female</th>\n",
+       "      <th>age_70_74_female</th>\n",
+       "      <th>age_75_79_female</th>\n",
+       "      <th>age_80_84_female</th>\n",
+       "      <th>age_85_above_female</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>country</td>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>-1280168.0</td>\n",
+       "      <td>-1660274.0</td>\n",
+       "      <td>-1471571.0</td>\n",
+       "      <td>-1419395.0</td>\n",
+       "      <td>-1323087.0</td>\n",
+       "      <td>-1505018.0</td>\n",
+       "      <td>-1687137.0</td>\n",
+       "      <td>-1605252.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1106147.0</td>\n",
+       "      <td>876042.0</td>\n",
+       "      <td>716822.0</td>\n",
+       "      <td>697046.0</td>\n",
+       "      <td>506898.0</td>\n",
+       "      <td>383483.0</td>\n",
+       "      <td>240071.0</td>\n",
+       "      <td>130278.0</td>\n",
+       "      <td>84068.0</td>\n",
+       "      <td>51510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>state</td>\n",
+       "      <td>Johor</td>\n",
+       "      <td>-139959.0</td>\n",
+       "      <td>-177624.0</td>\n",
+       "      <td>-171301.0</td>\n",
+       "      <td>-171217.0</td>\n",
+       "      <td>-174638.0</td>\n",
+       "      <td>-214664.0</td>\n",
+       "      <td>-232321.0</td>\n",
+       "      <td>-211206.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136588.0</td>\n",
+       "      <td>110579.0</td>\n",
+       "      <td>89670.0</td>\n",
+       "      <td>90086.0</td>\n",
+       "      <td>64189.0</td>\n",
+       "      <td>49732.0</td>\n",
+       "      <td>30595.0</td>\n",
+       "      <td>15079.0</td>\n",
+       "      <td>10345.0</td>\n",
+       "      <td>6259.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>state</td>\n",
+       "      <td>Kedah</td>\n",
+       "      <td>-78154.0</td>\n",
+       "      <td>-119697.0</td>\n",
+       "      <td>-110063.0</td>\n",
+       "      <td>-98402.0</td>\n",
+       "      <td>-78005.0</td>\n",
+       "      <td>-74132.0</td>\n",
+       "      <td>-103651.0</td>\n",
+       "      <td>-87885.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>74287.0</td>\n",
+       "      <td>58979.0</td>\n",
+       "      <td>51819.0</td>\n",
+       "      <td>55222.0</td>\n",
+       "      <td>38977.0</td>\n",
+       "      <td>30850.0</td>\n",
+       "      <td>18214.0</td>\n",
+       "      <td>9928.0</td>\n",
+       "      <td>6629.0</td>\n",
+       "      <td>3506.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>state</td>\n",
+       "      <td>Kelantan</td>\n",
+       "      <td>-71369.0</td>\n",
+       "      <td>-104694.0</td>\n",
+       "      <td>-99967.0</td>\n",
+       "      <td>-104583.0</td>\n",
+       "      <td>-84328.0</td>\n",
+       "      <td>-67763.0</td>\n",
+       "      <td>-61550.0</td>\n",
+       "      <td>-55609.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43360.0</td>\n",
+       "      <td>44730.0</td>\n",
+       "      <td>43098.0</td>\n",
+       "      <td>43177.0</td>\n",
+       "      <td>34919.0</td>\n",
+       "      <td>24345.0</td>\n",
+       "      <td>17010.0</td>\n",
+       "      <td>10204.0</td>\n",
+       "      <td>6111.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>state</td>\n",
+       "      <td>Melaka</td>\n",
+       "      <td>-44931.0</td>\n",
+       "      <td>-40574.0</td>\n",
+       "      <td>-35931.0</td>\n",
+       "      <td>-54323.0</td>\n",
+       "      <td>-48950.0</td>\n",
+       "      <td>-44481.0</td>\n",
+       "      <td>-61686.0</td>\n",
+       "      <td>-40396.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>39881.0</td>\n",
+       "      <td>23201.0</td>\n",
+       "      <td>20707.0</td>\n",
+       "      <td>21487.0</td>\n",
+       "      <td>17251.0</td>\n",
+       "      <td>14482.0</td>\n",
+       "      <td>9033.0</td>\n",
+       "      <td>4810.0</td>\n",
+       "      <td>3388.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>district</td>\n",
+       "      <td>Beluru</td>\n",
+       "      <td>-685.0</td>\n",
+       "      <td>-1276.0</td>\n",
+       "      <td>-1245.0</td>\n",
+       "      <td>-1581.0</td>\n",
+       "      <td>-1026.0</td>\n",
+       "      <td>-1919.0</td>\n",
+       "      <td>-1827.0</td>\n",
+       "      <td>-1149.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1127.0</td>\n",
+       "      <td>641.0</td>\n",
+       "      <td>562.0</td>\n",
+       "      <td>517.0</td>\n",
+       "      <td>397.0</td>\n",
+       "      <td>364.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>district</td>\n",
+       "      <td>Telang Usan</td>\n",
+       "      <td>-267.0</td>\n",
+       "      <td>-690.0</td>\n",
+       "      <td>-1139.0</td>\n",
+       "      <td>-1047.0</td>\n",
+       "      <td>-540.0</td>\n",
+       "      <td>-708.0</td>\n",
+       "      <td>-664.0</td>\n",
+       "      <td>-902.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>704.0</td>\n",
+       "      <td>481.0</td>\n",
+       "      <td>364.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>district</td>\n",
+       "      <td>W.P. Kuala Lumpur</td>\n",
+       "      <td>-56141.0</td>\n",
+       "      <td>-90466.0</td>\n",
+       "      <td>-86326.0</td>\n",
+       "      <td>-71426.0</td>\n",
+       "      <td>-61942.0</td>\n",
+       "      <td>-98644.0</td>\n",
+       "      <td>-123262.0</td>\n",
+       "      <td>-140024.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>83775.0</td>\n",
+       "      <td>62446.0</td>\n",
+       "      <td>41392.0</td>\n",
+       "      <td>38649.0</td>\n",
+       "      <td>25864.0</td>\n",
+       "      <td>18449.0</td>\n",
+       "      <td>9877.0</td>\n",
+       "      <td>4689.0</td>\n",
+       "      <td>2815.0</td>\n",
+       "      <td>1685.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>district</td>\n",
+       "      <td>W.P. Labuan</td>\n",
+       "      <td>-5441.0</td>\n",
+       "      <td>-4368.0</td>\n",
+       "      <td>-4211.0</td>\n",
+       "      <td>-4065.0</td>\n",
+       "      <td>-3766.0</td>\n",
+       "      <td>-4342.0</td>\n",
+       "      <td>-4278.0</td>\n",
+       "      <td>-5553.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2492.0</td>\n",
+       "      <td>2489.0</td>\n",
+       "      <td>2162.0</td>\n",
+       "      <td>1766.0</td>\n",
+       "      <td>1252.0</td>\n",
+       "      <td>861.0</td>\n",
+       "      <td>415.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>213.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>district</td>\n",
+       "      <td>W.P. Putrajaya</td>\n",
+       "      <td>-6676.0</td>\n",
+       "      <td>-8894.0</td>\n",
+       "      <td>-5818.0</td>\n",
+       "      <td>-3080.0</td>\n",
+       "      <td>-2032.0</td>\n",
+       "      <td>-2838.0</td>\n",
+       "      <td>-5035.0</td>\n",
+       "      <td>-8066.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4611.0</td>\n",
+       "      <td>2218.0</td>\n",
+       "      <td>1514.0</td>\n",
+       "      <td>1103.0</td>\n",
+       "      <td>751.0</td>\n",
+       "      <td>434.0</td>\n",
+       "      <td>257.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>177 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    area_type               area  age_0_4_male  age_5_9_male  age_10_14_male  \\\n",
+       "0     country           Malaysia    -1280168.0    -1660274.0      -1471571.0   \n",
+       "1       state              Johor     -139959.0     -177624.0       -171301.0   \n",
+       "2       state              Kedah      -78154.0     -119697.0       -110063.0   \n",
+       "3       state           Kelantan      -71369.0     -104694.0        -99967.0   \n",
+       "4       state             Melaka      -44931.0      -40574.0        -35931.0   \n",
+       "..        ...                ...           ...           ...             ...   \n",
+       "172  district             Beluru        -685.0       -1276.0         -1245.0   \n",
+       "173  district        Telang Usan        -267.0        -690.0         -1139.0   \n",
+       "174  district  W.P. Kuala Lumpur      -56141.0      -90466.0        -86326.0   \n",
+       "175  district        W.P. Labuan       -5441.0       -4368.0         -4211.0   \n",
+       "176  district     W.P. Putrajaya       -6676.0       -8894.0         -5818.0   \n",
+       "\n",
+       "     age_15_19_male  age_20_24_male  age_25_29_male  age_30_34_male  \\\n",
+       "0        -1419395.0      -1323087.0      -1505018.0      -1687137.0   \n",
+       "1         -171217.0       -174638.0       -214664.0       -232321.0   \n",
+       "2          -98402.0        -78005.0        -74132.0       -103651.0   \n",
+       "3         -104583.0        -84328.0        -67763.0        -61550.0   \n",
+       "4          -54323.0        -48950.0        -44481.0        -61686.0   \n",
+       "..              ...             ...             ...             ...   \n",
+       "172         -1581.0         -1026.0         -1919.0         -1827.0   \n",
+       "173         -1047.0          -540.0          -708.0          -664.0   \n",
+       "174        -71426.0        -61942.0        -98644.0       -123262.0   \n",
+       "175         -4065.0         -3766.0         -4342.0         -4278.0   \n",
+       "176         -3080.0         -2032.0         -2838.0         -5035.0   \n",
+       "\n",
+       "     age_35_39_male  ...  age_40_44_female  age_45_49_female  \\\n",
+       "0        -1605252.0  ...         1106147.0          876042.0   \n",
+       "1         -211206.0  ...          136588.0          110579.0   \n",
+       "2          -87885.0  ...           74287.0           58979.0   \n",
+       "3          -55609.0  ...           43360.0           44730.0   \n",
+       "4          -40396.0  ...           39881.0           23201.0   \n",
+       "..              ...  ...               ...               ...   \n",
+       "172         -1149.0  ...            1127.0             641.0   \n",
+       "173          -902.0  ...             704.0             481.0   \n",
+       "174       -140024.0  ...           83775.0           62446.0   \n",
+       "175         -5553.0  ...            2492.0            2489.0   \n",
+       "176         -8066.0  ...            4611.0            2218.0   \n",
+       "\n",
+       "     age_50_54_female  age_55_59_female  age_60_64_female  age_65_69_female  \\\n",
+       "0            716822.0          697046.0          506898.0          383483.0   \n",
+       "1             89670.0           90086.0           64189.0           49732.0   \n",
+       "2             51819.0           55222.0           38977.0           30850.0   \n",
+       "3             43098.0           43177.0           34919.0           24345.0   \n",
+       "4             20707.0           21487.0           17251.0           14482.0   \n",
+       "..                ...               ...               ...               ...   \n",
+       "172             562.0             517.0             397.0             364.0   \n",
+       "173             364.0             558.0             270.0             193.0   \n",
+       "174           41392.0           38649.0           25864.0           18449.0   \n",
+       "175            2162.0            1766.0            1252.0             861.0   \n",
+       "176            1514.0            1103.0             751.0             434.0   \n",
+       "\n",
+       "     age_70_74_female  age_75_79_female  age_80_84_female  age_85_above_female  \n",
+       "0            240071.0          130278.0           84068.0              51510.0  \n",
+       "1             30595.0           15079.0           10345.0               6259.0  \n",
+       "2             18214.0            9928.0            6629.0               3506.0  \n",
+       "3             17010.0           10204.0            6111.0               3650.0  \n",
+       "4              9033.0            4810.0            3388.0               2015.0  \n",
+       "..                ...               ...               ...                  ...  \n",
+       "172             201.0             126.0              77.0                 72.0  \n",
+       "173             114.0              65.0              75.0                 51.0  \n",
+       "174            9877.0            4689.0            2815.0               1685.0  \n",
+       "175             415.0             265.0             194.0                213.0  \n",
+       "176             257.0             108.0              60.0                 40.0  \n",
+       "\n",
+       "[177 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If not already installed, do: pip install pandas fastparquet\n",
+    "import pandas as pd\n",
+    "\n",
+    "URL_DATA = 'https://storage.googleapis.com/dosm-public-dashboards/kawasanku_admin_pyramid.parquet'\n",
+    "\n",
+    "df = pd.read_parquet(URL_DATA)\n",
+    "if 'date' in df.columns: df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "df\n",
+    "# Filter data by Tahun variable\n",
+    "# year = 'dun'\n",
+    "# df_filtered = df[df['area_type'] == year].reset_index()\n",
+    "# df_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "df.to_csv('ptree_geo_levelALL_2021.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['area_type', 'area', 'age_0_4_male', 'age_5_9_male', 'age_10_14_male',\n",
+       "       'age_15_19_male', 'age_20_24_male', 'age_25_29_male', 'age_30_34_male',\n",
+       "       'age_35_39_male', 'age_40_44_male', 'age_45_49_male', 'age_50_54_male',\n",
+       "       'age_55_59_male', 'age_60_64_male', 'age_65_69_male', 'age_70_74_male',\n",
+       "       'age_75_79_male', 'age_80_84_male', 'age_85_above_male',\n",
+       "       'age_0_4_female', 'age_5_9_female', 'age_10_14_female',\n",
+       "       'age_15_19_female', 'age_20_24_female', 'age_25_29_female',\n",
+       "       'age_30_34_female', 'age_35_39_female', 'age_40_44_female',\n",
+       "       'age_45_49_female', 'age_50_54_female', 'age_55_59_female',\n",
+       "       'age_60_64_female', 'age_65_69_female', 'age_70_74_female',\n",
+       "       'age_75_79_female', 'age_80_84_female', 'age_85_above_female'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "URL_DATA = 'https://storage.googleapis.com/dosm-public-dashboards/kawasanku_admin_pyramid.parquet'\n",
+    "df = pd.read_parquet(URL_DATA)\n",
+    "\n",
+    "# Convert date column to datetime if it exists\n",
+    "if 'date' in df.columns:\n",
+    "    df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "# Define geo_levels to filter by\n",
+    "geo_levels = ['country', 'state', 'district']\n",
+    "\n",
+    "for geo_level in geo_levels:\n",
+    "    # Filter data by geo_level\n",
+    "    df_geo = df[df['area_type'] == geo_level].reset_index(drop=True)\n",
+    "    \n",
+    "    # Generate CSV file for this geo_level\n",
+    "    filename = f'kawasanku_admin_pyramid_{geo_level}.csv'\n",
+    "    df_geo.to_csv(filename, index=False)\n"
    ]
   },
   {
