--- a/data_weatherUO/.md
+++ b/data_weatherUO/.md
@@ -1,1 +1,23 @@
+## Real Data - Hourly 
+source: https://open-meteo.com/
 
+### mapping with wmocode
+https://www.nodc.noaa.gov/archive/arc0021/0002199/1.1/data/0-data/HTML/WMO-CODE/WMO4677.HTM
+
+Data columns (total 12 columns):
+ #   Column               Non-Null Count  Dtype  
+---  ------               --------------  -----  
+ 0   time                 14945 non-null  object 
+ 1   temperature_2m_max   14945 non-null  float64
+ 2   temperature_2m_min   14945 non-null  float64
+ 3   temperature_2m_mean  14910 non-null  float64
+ 4   rain_sum             14910 non-null  float64
+ 5   precipitation_hours  14945 non-null  float64
+ 6   windspeed_10m_max    14945 non-null  float64
+ 7   weathercode          14945 non-null  int64  
+ 8   state                14945 non-null  object 
+ 9   city                 14945 non-null  object 
+ 10  latitude             14945 non-null  float64
+ 11  longitude            14945 non-null  float64
+
+ 
