--- a/data_weatherUO/.md
+++ b/data_weatherUO/.md
@@ -5,7 +5,7 @@ source: https://open-meteo.com/
 https://www.nodc.noaa.gov/archive/arc0021/0002199/1.1/data/0-data/HTML/WMO-CODE/WMO4677.HTM
 
 Data columns (total 12 columns):
- #   Column               Non-Null Count  Dtype  
+    Column               Non-Null Count  Dtype  
 ---  ------               --------------  -----  
  0   time                 14945 non-null  object 
  1   temperature_2m_max   14945 non-null  float64
